--- a/LZ4/src/makefile.am
+++ b/LZ4/src/makefile.am
@@ -18,15 +18,11 @@ MAJOR = 0
 MINOR = 1
 VERSION = $(MAJOR).$(MINOR)
 
-AM_CPPFLAGS=-I$(HDF5_ROOT)/include -I$(LZ4_ROOT)/include
-
 # The libh5lz4 library for plugin module.
 # Build it as shared library.
 lib_LTLIBRARIES=libh5lz4.la
-libh5lz4_la_SOURCES=H5Zlz4.c
+libh5lz4_la_SOURCES = H5Zlz4.c lz4.c lz4hc.c
 
-LDFLAGS=-L$(LZ4_ROOT)/lib
-LIBS=-llz4
 
 CHECK_CLEANFILES=*.o *.so* 
 DISTCLEANFILES=*.o *.so* 
