Added some linker options
I though this options might be useful (at least according to the libtool
manual).

--- a/LZ4/src/makefile.am
+++ b/LZ4/src/makefile.am
@@ -17,6 +17,7 @@ CP=cp
 MAJOR = 0
 MINOR = 1
 VERSION = $(MAJOR).$(MINOR)
+AM_LDFLAGS = -module -avoid-version -export-dynamic
 
 # The libh5lz4 library for plugin module.
 # Build it as shared library.
