--- a/LZ4/src/makefile.in
+++ b/LZ4/src/makefile.in
@@ -246,11 +246,12 @@ RM = rm -f
 CP = cp
 MAJOR = 0
 MINOR = 1
+AM_LDFLAGS = -module -avoid-version -export-dynamic
 
 # The libh5lz4 library for plugin module.
 # Build it as shared library.
 lib_LTLIBRARIES = libh5lz4.la
-libh5lz4_la_SOURCES = H5Zlz4.c lz4.c lz4hc.c
+libh5lz4_la_SOURCES = H5Zlz4.c lz4.c lz4hc.c lz4.h lz4hc.h
 CHECK_CLEANFILES = *.o *.so* 
 DISTCLEANFILES = *.o *.so* 
 all: all-am
