--- a/LZ4/example/makefile.in
+++ b/LZ4/example/makefile.in
@@ -228,7 +228,16 @@ top_srcdir = @top_srcdir@
 RM = rm -f
 CP = cp
 h5ex_d_lz4_SOURCE = h5ex_d_lz4.c
-EXTRA_DIST = testfiles/h5ex_d_lz4.tst testfiles/h5ex_d_lz4.ddl test.sh
+
+# we have to add the testfiles to the distribution - otherwise the 
+# tests will not run
+EXTRA_DIST = testfiles/h5ex_d_lz4.tst testfiles/h5ex_d_lz4.ddl test.sh \
+             testfiles/h5repack_layout.h5 \
+             testfiles/h5ex_d_lz4.ddl \
+             testfiles/h5ex_d_lz4.tst \
+             testfiles/h5repack_layout.h5-ud_convert.ddl \
+             testfiles/ud_convert.h5repack_layout.h5.tst
+
 EXTRA_PROG = $(noinst_PROGRAMS)
 TESTS_ENVIRONMENT = sh
 TEST_SCRIPT = test.sh
