--- a/LZ4/src/makefile.in
+++ b/LZ4/src/makefile.in
@@ -98,7 +98,7 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(libdir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
-libh5lz4_la_LIBADD =
+libh5lz4_la_DEPENDENCIES =
 am_libh5lz4_la_OBJECTS = H5Zlz4.lo lz4.lo lz4hc.lo
 libh5lz4_la_OBJECTS = $(am_libh5lz4_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -149,7 +149,8 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
 GREP = @GREP@
-HDF5PATH = @HDF5PATH@
+HDF5_CFLAGS = @HDF5_CFLAGS@
+HDF5_LIBS = @HDF5_LIBS@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -157,7 +158,6 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
-LIBHDF5 = @LIBHDF5@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
@@ -182,6 +182,9 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PKG_CONFIG = @PKG_CONFIG@
+PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
+PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
@@ -252,6 +255,7 @@ AM_LDFLAGS = -module -avoid-version -export-dynamic
 # Build it as shared library.
 lib_LTLIBRARIES = libh5lz4.la
 libh5lz4_la_SOURCES = H5Zlz4.c lz4.c lz4hc.c lz4.h lz4hc.h
+libh5lz4_la_LIBADD = 
 CHECK_CLEANFILES = *.o *.so* 
 DISTCLEANFILES = *.o *.so* 
 all: all-am
