--- a/LZ4/example/makefile.in
+++ b/LZ4/example/makefile.in
@@ -254,7 +254,7 @@ SCRIPT_DEPEND = h5ex_d_lz4$(EXEEXT)
 TEST_EXTENSIONS = .sh
 SH_LOG_COMPILER = $(SHELL)
 AM_SH_LOG_FLAGS = 
-CLEANFILES = *.h5 tmp.test tmp.out
+CLEANFILES = *.h5 tmp.test tmp.out *.tst *.ddl 
 DISTCLEANFILES = test.sh
 all: all-am
 
