--- a/LZ4/example/makefile.am
+++ b/LZ4/example/makefile.am
@@ -47,5 +47,5 @@ TEST_EXTENSIONS = .sh
 SH_LOG_COMPILER = $(SHELL)
 AM_SH_LOG_FLAGS =
 
-CLEANFILES=*.h5 tmp.test tmp.out *.tst *.ddl 
+CLEANFILES=*.h5 tmp.test tmp.out *.tst *.ddl *.err* *.out* *.new
 DISTCLEANFILES=test.sh
