--- a/LZ4/src/makefile.in
+++ b/LZ4/src/makefile.in
@@ -99,8 +99,12 @@ am__uninstall_files_from_dir = { \
 am__installdirs = "$(DESTDIR)$(libdir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libh5lz4_la_DEPENDENCIES =
-am_libh5lz4_la_OBJECTS = H5Zlz4.lo lz4.lo lz4hc.lo
+am_libh5lz4_la_OBJECTS = libh5lz4_la-H5Zlz4.lo libh5lz4_la-lz4.lo \
+	libh5lz4_la-lz4hc.lo
 libh5lz4_la_OBJECTS = $(am_libh5lz4_la_OBJECTS)
+libh5lz4_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(libh5lz4_la_CFLAGS) \
+	$(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/bin/depcomp
 am__depfiles_maybe = depfiles
@@ -255,6 +259,7 @@ AM_LDFLAGS = -module -avoid-version -export-dynamic
 # Build it as shared library.
 lib_LTLIBRARIES = libh5lz4.la
 libh5lz4_la_SOURCES = H5Zlz4.c lz4.c lz4hc.c lz4.h lz4hc.h
+libh5lz4_la_CFLAGS = $(AM_CFLAGS) $(HDF5_CFLAGS) $(CFLAGS)
 libh5lz4_la_LIBADD = 
 CHECK_CLEANFILES = *.o *.so* 
 DISTCLEANFILES = *.o *.so* 
@@ -325,7 +330,7 @@ clean-libLTLIBRARIES:
 	  rm -f "$${dir}/so_locations"; \
 	done
 libh5lz4.la: $(libh5lz4_la_OBJECTS) $(libh5lz4_la_DEPENDENCIES) $(EXTRA_libh5lz4_la_DEPENDENCIES) 
-	$(LINK) -rpath $(libdir) $(libh5lz4_la_OBJECTS) $(libh5lz4_la_LIBADD) $(LIBS)
+	$(libh5lz4_la_LINK) -rpath $(libdir) $(libh5lz4_la_OBJECTS) $(libh5lz4_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -333,9 +338,9 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/H5Zlz4.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lz4.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lz4hc.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libh5lz4_la-H5Zlz4.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libh5lz4_la-lz4.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libh5lz4_la-lz4hc.Plo@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -357,6 +362,27 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LTCOMPILE) -c -o $@ $<
+
+libh5lz4_la-H5Zlz4.lo: H5Zlz4.c
+@am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libh5lz4_la_CFLAGS) $(CFLAGS) -MT libh5lz4_la-H5Zlz4.lo -MD -MP -MF $(DEPDIR)/libh5lz4_la-H5Zlz4.Tpo -c -o libh5lz4_la-H5Zlz4.lo `test -f 'H5Zlz4.c' || echo '$(srcdir)/'`H5Zlz4.c
+@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/libh5lz4_la-H5Zlz4.Tpo $(DEPDIR)/libh5lz4_la-H5Zlz4.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='H5Zlz4.c' object='libh5lz4_la-H5Zlz4.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libh5lz4_la_CFLAGS) $(CFLAGS) -c -o libh5lz4_la-H5Zlz4.lo `test -f 'H5Zlz4.c' || echo '$(srcdir)/'`H5Zlz4.c
+
+libh5lz4_la-lz4.lo: lz4.c
+@am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libh5lz4_la_CFLAGS) $(CFLAGS) -MT libh5lz4_la-lz4.lo -MD -MP -MF $(DEPDIR)/libh5lz4_la-lz4.Tpo -c -o libh5lz4_la-lz4.lo `test -f 'lz4.c' || echo '$(srcdir)/'`lz4.c
+@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/libh5lz4_la-lz4.Tpo $(DEPDIR)/libh5lz4_la-lz4.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='lz4.c' object='libh5lz4_la-lz4.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libh5lz4_la_CFLAGS) $(CFLAGS) -c -o libh5lz4_la-lz4.lo `test -f 'lz4.c' || echo '$(srcdir)/'`lz4.c
+
+libh5lz4_la-lz4hc.lo: lz4hc.c
+@am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libh5lz4_la_CFLAGS) $(CFLAGS) -MT libh5lz4_la-lz4hc.lo -MD -MP -MF $(DEPDIR)/libh5lz4_la-lz4hc.Tpo -c -o libh5lz4_la-lz4hc.lo `test -f 'lz4hc.c' || echo '$(srcdir)/'`lz4hc.c
+@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/libh5lz4_la-lz4hc.Tpo $(DEPDIR)/libh5lz4_la-lz4hc.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='lz4hc.c' object='libh5lz4_la-lz4hc.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libh5lz4_la_CFLAGS) $(CFLAGS) -c -o libh5lz4_la-lz4hc.lo `test -f 'lz4hc.c' || echo '$(srcdir)/'`lz4hc.c
 
 mostlyclean-libtool:
 	-rm -f *.lo
