Have a good build on Ubuntu too
Need to remove the repack tests for Ubuntu 14.04. There seem to be a bug in
h5repack.

--- a/LZ4/example/makefile.am
+++ b/LZ4/example/makefile.am
@@ -23,7 +23,7 @@ CP=cp
 noinst_PROGRAMS = h5ex_d_lz4
 h5ex_d_lz4_SOURCES = h5ex_d_lz4.c
 h5ex_d_lz4_CFLAGS = $(AM_CFLAGS) $(HDF5_CFLAGS) $(CFLAGS)
-h5ex_d_lz4_LDADD = $(HDF5_LIBS)
+h5ex_d_lz4_LDFLAGS = $(AM_LDFLAGS) $(LDFLAGS) $(HDF5_LDFLAGS) 
 
 # we have to add the testfiles to the distribution - otherwise the 
 # tests will not run
