--- a/LZ4/makefile.in
+++ b/LZ4/makefile.in
@@ -167,6 +167,7 @@ EXEEXT = @EXEEXT@
 FGREP = @FGREP@
 GREP = @GREP@
 HDF5_CFLAGS = @HDF5_CFLAGS@
+HDF5_LDFLAGS = @HDF5_LDFLAGS@
 HDF5_LIBS = @HDF5_LIBS@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
